--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+body{
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
+  margin: 1rem auto;
+  width: 60%;
+  background-color: rgba(10,115,170,255);
+  height: 100%;
+}
+
+.input{
+  display: flex;
+  margin: 1rem;
+}
+
+input{
+  width: 100%;
+  flex: 1;
+  border: none;
+  border-radius: 10px;
+  padding: 0 1em;
+}
+
+input:focus{
+  outline: none;
+}
+
+.btn{
+  background-color: #063970;
+  color: #fff;
+  border: none;
+  border-radius: 15px;
+  padding: 1em 1.5em;
+  margin-left: 1rem;
+}
+
+.output{
+  flex: 1;
+}
+
+.todo{
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #fff;
+  margin: 1rem;
+  padding: .5em 1em;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.todo-task{
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.done {
+  text-decoration: line-through;
+}
+
+.unDone {
+  text-decoration: none;
 }
